refactor: migrate new endpoints to new /api/reports path
